<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".fragment.CaoFragment"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fragment_padding">

        <TextView
                android:text="@string/cao_subtitle_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView4"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:layout_marginBottom="@dimen/fragment_padding"/>
        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cao_input_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            android:id="@+id/et_cao_marker_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cao_input_distance"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            android:id="@+id/et_cao_marker_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="numberDecimal"
            android:text="" />

        <TextView
                android:text="@string/cao_input_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView17"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/et_cao_marker_radius"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cao_calibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/cao_calibrate" />
        </LinearLayout>

        <TextView
                android:text="@string/cao_subtitle_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView13"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:layout_marginTop="@dimen/fragment_padding" android:layout_marginBottom="@dimen/fragment_padding"/>
        <LinearLayout
                android:id="@+id/ll_cao_calibration_profile_container"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/cao_input_marker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView15"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <Spinner
                    android:id="@+id/sp_cao_calibration_profiles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/cao_profile_distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView16" android:layout_weight="0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                <TextView
                        android:text="@string/data_not_available"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/tv_cao_profile_distance" android:layout_weight="0"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/cao_profile_radius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_weight="0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                <TextView
                        android:text="@string/data_not_available"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/tv_cao_profile_radius" android:layout_weight="0"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/cao_last_distance"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/tv_cao_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/data_not_available" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cao_start"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/cao_start" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>